analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> declaration SEMICOLON
Rule 5     instruction -> asignation SEMICOLON
Rule 6     instruction -> println SEMICOLON
Rule 7     instruction -> if_st
Rule 8     instruction -> function
Rule 9     statement -> LCBRACKET instructions RCBRACKET
Rule 10    primitive_type -> RINT
Rule 11    primitive_type -> RFLOAT
Rule 12    primitive_type -> RBOOL
Rule 13    primitive_type -> RCHAR
Rule 14    primitive_type -> AMPERSAND RSTR
Rule 15    primitive_type -> RSTRING
Rule 16    primitive_type -> RUSIZE
Rule 17    declaration -> RLET RMUT ID COLON primitive_type EQUAL expression
Rule 18    declaration -> RLET ID COLON primitive_type EQUAL expression
Rule 19    asignation -> ID EQUAL expression
Rule 20    println -> RPRINTLN NOT LPAREN expressions RPAREN
Rule 21    if_st -> RIF expression statement else_st
Rule 22    else_st -> RELSE statement
Rule 23    else_st -> RELSE if_st
Rule 24    else_st -> empty
Rule 25    function -> RFN ID LPAREN RPAREN statement
Rule 26    expressions -> expressions COMMA expression
Rule 27    expressions -> expression
Rule 28    expression -> expression RAS primitive_type
Rule 29    expression -> MINUS expression
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression MINUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> expression MODULE expression
Rule 35    expression -> expression EQUALS expression
Rule 36    expression -> expression NEQUALS expression
Rule 37    expression -> expression LTHAN expression
Rule 38    expression -> expression LORE expression
Rule 39    expression -> expression GTHAN expression
Rule 40    expression -> expression GORE expression
Rule 41    expression -> expression AND expression
Rule 42    expression -> expression OR expression
Rule 43    expression -> NOT expression
Rule 44    expression -> LPAREN expression RPAREN
Rule 45    expression -> expression DOT RTOSTRING LPAREN RPAREN
Rule 46    expression -> expression DOT RTOOWNED LPAREN RPAREN
Rule 47    expression -> INT
Rule 48    expression -> FLOAT
Rule 49    expression -> STRING
Rule 50    expression -> CHAR
Rule 51    expression -> RTRUE
Rule 52    expression -> RFALSE
Rule 53    expression -> ID
Rule 54    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 14
AND                  : 41
CHAR                 : 50
COLON                : 17 18
COMMA                : 26
DIVIDE               : 33
DOT                  : 45 46
EQUAL                : 17 18 19
EQUALS               : 35
FLOAT                : 48
GORE                 : 40
GTHAN                : 39
ID                   : 17 18 19 25 53
INT                  : 47
LCBRACKET            : 9
LORE                 : 38
LPAREN               : 20 25 44 45 46
LTHAN                : 37
MINUS                : 29 31
MODULE               : 34
NEQUALS              : 36
NOT                  : 20 43
OR                   : 42
PLUS                 : 30
RAS                  : 28
RBOOL                : 12
RCBRACKET            : 9
RCHAR                : 13
RELSE                : 22 23
RFALSE               : 52
RFLOAT               : 11
RFN                  : 25
RIF                  : 21
RINT                 : 10
RLET                 : 17 18
RMUT                 : 17
RPAREN               : 20 25 44 45 46
RPRINTLN             : 20
RSTR                 : 14
RSTRING              : 15
RTOOWNED             : 46
RTOSTRING            : 45
RTRUE                : 51
RUSIZE               : 16
SEMICOLON            : 4 5 6
STRING               : 49
TIMES                : 32
error                : 

Nonterminals, with rules where they appear

asignation           : 5
declaration          : 4
else_st              : 21
empty                : 24
expression           : 17 18 19 21 26 27 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46
expressions          : 20 26
function             : 8
if_st                : 7 23
init                 : 0
instruction          : 2 3
instructions         : 1 2 9
primitive_type       : 17 18 28
println              : 6
statement            : 21 22 25

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . declaration SEMICOLON
    (5) instruction -> . asignation SEMICOLON
    (6) instruction -> . println SEMICOLON
    (7) instruction -> . if_st
    (8) instruction -> . function
    (17) declaration -> . RLET RMUT ID COLON primitive_type EQUAL expression
    (18) declaration -> . RLET ID COLON primitive_type EQUAL expression
    (19) asignation -> . ID EQUAL expression
    (20) println -> . RPRINTLN NOT LPAREN expressions RPAREN
    (21) if_st -> . RIF expression statement else_st
    (25) function -> . RFN ID LPAREN RPAREN statement

    RLET            shift and go to state 9
    ID              shift and go to state 10
    RPRINTLN        shift and go to state 11
    RIF             shift and go to state 12
    RFN             shift and go to state 13

    init                           shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    declaration                    shift and go to state 4
    asignation                     shift and go to state 5
    println                        shift and go to state 6
    if_st                          shift and go to state 7
    function                       shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . declaration SEMICOLON
    (5) instruction -> . asignation SEMICOLON
    (6) instruction -> . println SEMICOLON
    (7) instruction -> . if_st
    (8) instruction -> . function
    (17) declaration -> . RLET RMUT ID COLON primitive_type EQUAL expression
    (18) declaration -> . RLET ID COLON primitive_type EQUAL expression
    (19) asignation -> . ID EQUAL expression
    (20) println -> . RPRINTLN NOT LPAREN expressions RPAREN
    (21) if_st -> . RIF expression statement else_st
    (25) function -> . RFN ID LPAREN RPAREN statement

    $end            reduce using rule 1 (init -> instructions .)
    RLET            shift and go to state 9
    ID              shift and go to state 10
    RPRINTLN        shift and go to state 11
    RIF             shift and go to state 12
    RFN             shift and go to state 13

    instruction                    shift and go to state 14
    declaration                    shift and go to state 4
    asignation                     shift and go to state 5
    println                        shift and go to state 6
    if_st                          shift and go to state 7
    function                       shift and go to state 8

state 3

    (3) instructions -> instruction .

    RLET            reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    RPRINTLN        reduce using rule 3 (instructions -> instruction .)
    RIF             reduce using rule 3 (instructions -> instruction .)
    RFN             reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    RCBRACKET       reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 15


state 5

    (5) instruction -> asignation . SEMICOLON

    SEMICOLON       shift and go to state 16


state 6

    (6) instruction -> println . SEMICOLON

    SEMICOLON       shift and go to state 17


state 7

    (7) instruction -> if_st .

    RLET            reduce using rule 7 (instruction -> if_st .)
    ID              reduce using rule 7 (instruction -> if_st .)
    RPRINTLN        reduce using rule 7 (instruction -> if_st .)
    RIF             reduce using rule 7 (instruction -> if_st .)
    RFN             reduce using rule 7 (instruction -> if_st .)
    $end            reduce using rule 7 (instruction -> if_st .)
    RCBRACKET       reduce using rule 7 (instruction -> if_st .)


state 8

    (8) instruction -> function .

    RLET            reduce using rule 8 (instruction -> function .)
    ID              reduce using rule 8 (instruction -> function .)
    RPRINTLN        reduce using rule 8 (instruction -> function .)
    RIF             reduce using rule 8 (instruction -> function .)
    RFN             reduce using rule 8 (instruction -> function .)
    $end            reduce using rule 8 (instruction -> function .)
    RCBRACKET       reduce using rule 8 (instruction -> function .)


state 9

    (17) declaration -> RLET . RMUT ID COLON primitive_type EQUAL expression
    (18) declaration -> RLET . ID COLON primitive_type EQUAL expression

    RMUT            shift and go to state 18
    ID              shift and go to state 19


state 10

    (19) asignation -> ID . EQUAL expression

    EQUAL           shift and go to state 20


state 11

    (20) println -> RPRINTLN . NOT LPAREN expressions RPAREN

    NOT             shift and go to state 21


state 12

    (21) if_st -> RIF . expression statement else_st
    (28) expression -> . expression RAS primitive_type
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULE expression
    (35) expression -> . expression EQUALS expression
    (36) expression -> . expression NEQUALS expression
    (37) expression -> . expression LTHAN expression
    (38) expression -> . expression LORE expression
    (39) expression -> . expression GTHAN expression
    (40) expression -> . expression GORE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression DOT RTOSTRING LPAREN RPAREN
    (46) expression -> . expression DOT RTOOWNED LPAREN RPAREN
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . CHAR
    (51) expression -> . RTRUE
    (52) expression -> . RFALSE
    (53) expression -> . ID

    MINUS           shift and go to state 23
    NOT             shift and go to state 24
    LPAREN          shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    CHAR            shift and go to state 29
    RTRUE           shift and go to state 30
    RFALSE          shift and go to state 31
    ID              shift and go to state 32

    expression                     shift and go to state 22

state 13

    (25) function -> RFN . ID LPAREN RPAREN statement

    ID              shift and go to state 33


state 14

    (2) instructions -> instructions instruction .

    RLET            reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    RPRINTLN        reduce using rule 2 (instructions -> instructions instruction .)
    RIF             reduce using rule 2 (instructions -> instructions instruction .)
    RFN             reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    RCBRACKET       reduce using rule 2 (instructions -> instructions instruction .)


state 15

    (4) instruction -> declaration SEMICOLON .

    RLET            reduce using rule 4 (instruction -> declaration SEMICOLON .)
    ID              reduce using rule 4 (instruction -> declaration SEMICOLON .)
    RPRINTLN        reduce using rule 4 (instruction -> declaration SEMICOLON .)
    RIF             reduce using rule 4 (instruction -> declaration SEMICOLON .)
    RFN             reduce using rule 4 (instruction -> declaration SEMICOLON .)
    $end            reduce using rule 4 (instruction -> declaration SEMICOLON .)
    RCBRACKET       reduce using rule 4 (instruction -> declaration SEMICOLON .)


state 16

    (5) instruction -> asignation SEMICOLON .

    RLET            reduce using rule 5 (instruction -> asignation SEMICOLON .)
    ID              reduce using rule 5 (instruction -> asignation SEMICOLON .)
    RPRINTLN        reduce using rule 5 (instruction -> asignation SEMICOLON .)
    RIF             reduce using rule 5 (instruction -> asignation SEMICOLON .)
    RFN             reduce using rule 5 (instruction -> asignation SEMICOLON .)
    $end            reduce using rule 5 (instruction -> asignation SEMICOLON .)
    RCBRACKET       reduce using rule 5 (instruction -> asignation SEMICOLON .)


state 17

    (6) instruction -> println SEMICOLON .

    RLET            reduce using rule 6 (instruction -> println SEMICOLON .)
    ID              reduce using rule 6 (instruction -> println SEMICOLON .)
    RPRINTLN        reduce using rule 6 (instruction -> println SEMICOLON .)
    RIF             reduce using rule 6 (instruction -> println SEMICOLON .)
    RFN             reduce using rule 6 (instruction -> println SEMICOLON .)
    $end            reduce using rule 6 (instruction -> println SEMICOLON .)
    RCBRACKET       reduce using rule 6 (instruction -> println SEMICOLON .)


state 18

    (17) declaration -> RLET RMUT . ID COLON primitive_type EQUAL expression

    ID              shift and go to state 34


state 19

    (18) declaration -> RLET ID . COLON primitive_type EQUAL expression

    COLON           shift and go to state 35


state 20

    (19) asignation -> ID EQUAL . expression
    (28) expression -> . expression RAS primitive_type
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULE expression
    (35) expression -> . expression EQUALS expression
    (36) expression -> . expression NEQUALS expression
    (37) expression -> . expression LTHAN expression
    (38) expression -> . expression LORE expression
    (39) expression -> . expression GTHAN expression
    (40) expression -> . expression GORE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression DOT RTOSTRING LPAREN RPAREN
    (46) expression -> . expression DOT RTOOWNED LPAREN RPAREN
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . CHAR
    (51) expression -> . RTRUE
    (52) expression -> . RFALSE
    (53) expression -> . ID

    MINUS           shift and go to state 23
    NOT             shift and go to state 24
    LPAREN          shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    CHAR            shift and go to state 29
    RTRUE           shift and go to state 30
    RFALSE          shift and go to state 31
    ID              shift and go to state 32

    expression                     shift and go to state 36

state 21

    (20) println -> RPRINTLN NOT . LPAREN expressions RPAREN

    LPAREN          shift and go to state 37


state 22

    (21) if_st -> RIF expression . statement else_st
    (28) expression -> expression . RAS primitive_type
    (30) expression -> expression . PLUS expression
    (31) expression -> expression . MINUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression
    (34) expression -> expression . MODULE expression
    (35) expression -> expression . EQUALS expression
    (36) expression -> expression . NEQUALS expression
    (37) expression -> expression . LTHAN expression
    (38) expression -> expression . LORE expression
    (39) expression -> expression . GTHAN expression
    (40) expression -> expression . GORE expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . OR expression
    (45) expression -> expression . DOT RTOSTRING LPAREN RPAREN
    (46) expression -> expression . DOT RTOOWNED LPAREN RPAREN
    (9) statement -> . LCBRACKET instructions RCBRACKET

    RAS             shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43
    MODULE          shift and go to state 44
    EQUALS          shift and go to state 45
    NEQUALS         shift and go to state 46
    LTHAN           shift and go to state 47
    LORE            shift and go to state 48
    GTHAN           shift and go to state 49
    GORE            shift and go to state 50
    AND             shift and go to state 51
    OR              shift and go to state 52
    DOT             shift and go to state 53
    LCBRACKET       shift and go to state 54

    statement                      shift and go to state 38

state 23

    (29) expression -> MINUS . expression
    (28) expression -> . expression RAS primitive_type
    (29) expression -> . MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULE expression
    (35) expression -> . expression EQUALS expression
    (36) expression -> . expression NEQUALS expression
    (37) expression -> . expression LTHAN expression
    (38) expression -> . expression LORE expression
    (39) expression -> . expression GTHAN expression
    (40) expression -> . expression GORE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression DOT RTOSTRING LPAREN RPAREN
    (46) expression -> . expression DOT RTOOWNED LPAREN RPAREN
    (47) expression -> . INT
    (48) expression -> . FLOAT
    (49) expression -> . STRING
    (50) expression -> . CHAR
    (51) expression -> . RTRUE
    (52) expression -> . RFALSE
    (53) expression -> . ID

    MINUS           shift and go to state 23
    NOT             shift and go to state 24
    LPAREN          shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    CHAR            shift and go to state 29
    RTRUE           shift and go to state 30
    RFALSE          shift and go to state 31
    ID              shift and go to state 32

    expression                     shift and go to state 55

state 24
